Sat Jun 22 14:31:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* ext/etc/etc.c (setup_passwd): pass 0 as VALUE to rb_struct_new to
	  prevent segfault if the compiler passes it as a 32 bit integer on
	  a 64 bit ruby

Sat Jun 22 13:47:13 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_pack): MEMZERO can be used even if nails is not zero.

Sat Jun 22 13:43:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* ext/etc/etc.c (etc_getpwnam): use PRIsVALUE in format string instead
	  of %s and RSTRING_PTR

	* ext/etc/etc.c (etc_getgrnam): ditto

Sat Jun 22 13:07:15 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (CLEAR_LOWBITS): Rewritten without RSHIFTX.
	  (RSHIFTX): Removed.

Sat Jun 22 10:38:03 2013  Tanaka Akira  <akr@fsij.org>

	* pack.c (num2i32): Removed.
	  (pack_pack): Don't use num2i32.

Sat Jun 22 09:55:13 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (LSHIFTX): Defined to suppress a warning.
	  (RSHIFTX): Ditto.
	  (CLEAR_LOWBITS): Use LSHIFTX and RSHIFTX.
	  (FILL_LOWBITS): Use LSHIFTX.
	  Reported by ko1 via IRC.

Sat Jun 22 09:11:33 2013  Ryan Davis  <ryand-ruby@zenspider.com>

	* lib/minitest/*: Imported minitest 4.7.5 (r8724)
	* test/minitest/*: ditto

Sat Jun 22 07:20:30 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_prof_set_heap_info, after_gc_sweep): call
	  gc_prof_set_heap_info() just after sweeping to calculate
	  live object number correctly.
	  (live object number = total generated number (before marking) -
                                total freed number (after sweeping))

	* gc.c (gc_marks): record `oldgen_object_count' into current profile`
	  record directly.

	* gc.c (rgengc_rememberset_mark): same for remembered_normal_objects
	  and remembered_shady_objects.

Sat Jun 22 06:46:04 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_objspace::profile): rename rb_objspace::profile::record to
	  records (because it points a set of records) and add a field